# danilorca

./: .gitignore  Pipfile  README.md  build.sh  check_later.md  download.py  download_youtube.sh  pelicanconf.py  publishconf.py  pyproject.toml  tasks.py  validate_feed.py
content/: 2020-05-30.md  2020-06-06.md  2020-06-13.md  2020-06-20.md  2020-06-27.md  2020-07-04.md  2020-07-11.md  2020-07-18.md  2020-07-25.md  2020-08-01.md  2020-08-08.md  2020-08-15.md  2020-08-22.md  2020-08-29.md  2020-09-05.md  2020-09-12.md  2020-09-26.md  2020-10-03.md  2020-10-10.md  2020-10-17.md  2020-10-24.md  2020-10-31.md  2020-11-07.md  2020-11-14.md  2020-11-21.md  2020-11-28.md  2020-12-05.md  2020-12-12.md  2020-12-19.md  2020-12-26.md  2021-01-02.md  2021-01-09.md  2021-01-16.md  2021-01-23.md  2021-01-30.md  2021-02-06.md  2021-02-13.md  2021-02-20.md  2021-02-27.md  2021-03-06.md  (+232 more)
downloads/: 2020-05-30.json  2020-06-06.json  2020-06-13.json  2020-06-20.json  2020-06-27.json  2020-07-04.json  2020-07-11.json  2020-07-18.json  2020-07-25.json  2020-08-01.json  2020-08-08.json  2020-08-15.json  2020-08-22.json  2020-08-29.json  2020-09-05.json  2020-09-12.json  2020-09-26.json  2020-10-03.json  2020-10-10.json  2020-10-17.json  2020-10-24.json  2020-10-31.json  2020-11-07.json  2020-11-14.json  2020-11-21.json  2020-11-28.json  2020-12-05.json  2020-12-12.json  2020-12-19.json  2020-12-26.json  2021-01-02.json  2021-01-09.json  2021-01-16.json  2021-01-23.json  2021-01-30.json  2021-02-06.json  2021-02-13.json  2021-02-20.json  2021-02-27.json  2021-03-06.json  (+8 more)
output/: authors.html  (+5 more)
(+14 files in other folders)
