[project]
name = "enprendete"
version = "0.2.0"
description = ""
authors = [
    {name = "pdelsol", email = "pato@admetricks.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "requests>=2.32.0",
    "pelican[markdown]>=4.11.0",
    "boto3>=1.41.0",
    "beautifulsoup4>=4.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["download.py"]
